# FT232H_ADS1115_CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
VisualStudio/: FT232H.sln  ads1115-i2c.vcxproj  ads1115-i2c.vcxproj.filters
inc/: FT232H_ADS1115.h  ft232h_ads1115.hpp
inc/ads1115/: ADS1115.h  error.h
lib/x64/LIB/: libmpsse.lib
src/: example.cpp  ft232h_ads1115.cpp
